@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-10-25 19:51:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-7
+
+    Summary:
+      Removed some old debugging code.
+    Revision:
+      missingh--head--0.5--patch-7
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Network/FTP/Client.hs
+
+
 2004-10-25 19:28:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-6
 
     Summary:
